# atsamd

./: crates.json  update-pacs.sh
boards/samd10_bare/: CHANGELOG.md  Cargo.toml  README.md  memory.x
boards/samd10_bare/.cargo/: config
boards/samd10_bare/examples/: adc.rs  blinky_basic.rs  i2c.rs  pwm.rs  serial.rs  timer.rs
boards/samd10_bare/src/: lib.rs
hal/: Cargo.toml
hal/src/: lib.rs
hal/src/sercom/: pad.rs
hal/src/sercom/i2c/: pads_thumbv6m.rs
hal/src/sercom/pad/: impl_pad_thumbv6m.rs
hal/src/sercom/spi/: pads_thumbv6m.rs
hal/src/sercom/uart/: pads_thumbv6m.rs
hal/src/thumbv6m/: adc.rs  calibration.rs  clock.rs  timer.rs
hal/src/thumbv6m/eic/: pin.rs
pac/atsamd10d/: Cargo.toml  device.x
pac/atsamd10d/src/: ac.rs  adc.rs  dac.rs  dmac.rs  dsu.rs  eic.rs  evsys.rs  gclk.rs  hmatrix.rs  lib.rs  mtb.rs  nvmctrl.rs  pac0.rs  pm.rs  port.rs  rtc.rs  sercom0.rs  sysctrl.rs  tc1.rs  tcc0.rs  wdt.rs
pac/atsamd10d/src/ac/: compctrl.rs  ctrla.rs  ctrlb.rs  evctrl.rs  intenclr.rs  intenset.rs  intflag.rs  scaler.rs  statusa.rs  statusb.rs  statusc.rs  winctrl.rs
pac/atsamd10d/src/adc/: avgctrl.rs  calib.rs  ctrla.rs  ctrlb.rs  evctrl.rs  gaincorr.rs  inputctrl.rs  intenclr.rs  intenset.rs  intflag.rs  offsetcorr.rs  refctrl.rs  result.rs  sampctrl.rs  status.rs  swtrig.rs  winctrl.rs  winlt.rs  winut.rs
pac/atsamd10d/src/dac/: ctrlb.rs  data.rs  databuf.rs  evctrl.rs  intenclr.rs  intenset.rs  intflag.rs  status.rs
pac/atsamd10d/src/dmac/: active.rs  baseaddr.rs  busych.rs  chctrla.rs  chctrlb.rs  chid.rs  (+17 more)
svd/devices/: atsamd10d13am.xsl
(+289 files in other folders)
