[package]
name = "samd10_bare"
version = "0.8.1"
authors = ["Ben Von Handorf <developer@skyironstudio.com>"]
description = "Support crate for the ATSAMD10D"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
edition = "2018"

# for cargo flash
[package.metadata]
chip = "ATSAMD10D13AM"

[dependencies.cortex-m-rt]
version = "0.7"
optional = true

[dependencies.atsamd-hal]
path = "../../hal"
# version = "0.15.1"
default-features = false

[dev-dependencies]
cortex-m = "0.7"
panic-halt = "0.2"
panic-semihosting = "0.5"
panic-probe = "0.2.0"
rtt-target = { version = "0.3.0", features = ["cortex-m"] }

[features]
# ask the HAL to enable atsamd11c support
default = ["rt", "atsamd-hal/samd10d"]
rt = ["cortex-m-rt", "atsamd-hal/samd10d-rt"]
unproven = ["atsamd-hal/unproven"]
use_semihosting = []

[profile.release]
debug = true

[profile.dev]
opt-level = "s"

[[example]]
name = "adc"
required-features = ["unproven", "rt", "use_semihosting"]

[[example]]
name = "blinky_basic"

[[example]]
name = "pwm"
required-features = ["unproven"]

[[example]]
name = "serial"

[[example]]
name = "timer"

[[example]]
name = "i2c"
required-features = ["atsamd-hal/dma"]
